fmt, trailing_comma = Vertical

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -5,4 +5,4 @@ brace_style = "PreferSameLine"
 indent_style = "Block"
 imports_granularity = "Module"
 group_imports = "StdExternalCrate"
-trailing_comma = "Never"
+trailing_comma = "Vertical"
